fullCalendar in Angular added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,24 @@
-<mwl-calendar-month-view
+<!-- <<mwl-calendar-month-view
       [viewDate]="viewDate"
       [events]="events">
-</mwl-calendar-month-view>
+</mwl-calendar-month-view> -->
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.0/fullcalendar.min.css">
+
+<div style="text-align:center">
+  <h1>
+    Welcome to {{ title }}
+  </h1>
+
+  <div *ngIf="calendarOptions">
+    <ng-fullcalendar #ucCalendar [options]="calendarOptions"
+    (eventClick)="eventClick($event.detail)"
+    (eventDrop)="updateEvent($event.detail)"
+
+    (eventResize)="updateEvent($event.detail)"
+    (clickButton)="clickButton($event.detail)"
+    >
+
+    </ng-fullcalendar>
+  </div>
+</div>
